🐛 fix a bug when no scroll affect sidebar alignment

--- a/src/renderer/ui/components/scroll_view/style/index.scss
+++ b/src/renderer/ui/components/scroll_view/style/index.scss
@@ -6,7 +6,7 @@
   position: relative;
   width: 100%;
   align-items: stretch;
-  overflow-x: auto;
+  overflow-x: scroll;
   overscroll-behavior: contain;
   padding-bottom: 10px;
 }
